# dp-nblist

./: .clang-format  .gitignore  README.md  mkdocs.yml  requirements.yml
CPP/: README.md
CUDA/: README.md  grid_based_nbl.cu  tools.cuh
Grid_NL/: README.md  grid_based_nbl.py  grid_based_nbl_cpp.cpp  grid_based_nbl_mp.cpp  validation.py
Hash Version/Python/: hash_based_nbl.py
Hash_NL/Cpp/: hash_nbl.h
Hash_NL/Cuda/: hash_nbl.cuh
Hash_NL/Python/: base_class.py  hash_based_nbl.py  hash_function.py
Hash_NL/docs/: docs.md
Octree_NL/: README.md  grid_based_nbl.cu  validation.py
cpp/: CMakeLists.txt
cpp/include/: approx.hpp  baseNBL.h  baseNeighborlist.h  box.h  hashNBL.h  mat3.hpp  refCellList.h  vec3.hpp
cpp/src/: CMakeLists.txt  box.cpp  refCellList.cpp
cpp/tests/: CMakeLists.txt  test_approx.cpp  test_box.cpp  test_mat3.cpp  test_refCellList.cpp  test_vec3.cpp
cpp/tests/tests-data/: 50000.lmp  gen.py  get_neb.cpp  in.test  out_nbl.txt  output_full.txt  readme.md
cpp/tests/tests-data/heterogeneous/: readme.md
cpp/tests/tests-data/homogeneous/: homogeneous_sparse_water.lmp  readme.md
cpp/tests/tests-data/interface/: interface_nb_water.lmp  readme.md
cpp/tests/tests-data/protein_in_water/: readme.md
cpp/tests/tests-data/scale/: readme.md  scale_water_100.lmp  scale_water_120.lmp  scale_water_80.lmp
cuda/: CMakeLists.txt  readme.md
cuda/examples/lammps/: pynblist_lmp.py
cuda/examples/simple/: test.py
cuda/include/: approx.cpp  box.h  cuda_nblist.h  mat3.cpp  vec3.cpp
cuda/src/: CMakeLists.txt  box.cpp  cuda_nblist.cu  cuda_nblist_py.cpp
cuda/tests/: CMakeLists.txt  test_box.cpp  test_cuda_nblist.cpp  test_mat3.cpp  test_vec3.cpp
cuda/tests/tests-data/: protein.lmp  ref_nblist_Nb_water.txt  ref_nblist_homogeneous_dense.txt  ref_nblist_protein.txt
docs/Algorithms/: Linked-cell.md  index.md
docs/GetStart/: index.md
docs/benchmark/: index.md
python/: pyproject.toml
python/dp-nblist/: baseNBL.py  box.py  hashNBL.py
python/dp-nblist/jax/: __init__.py
python/dp-nblist/torch/: __init__.py  schnet.py
python/tests/: conftest.py  test_hash_nbl.py
python/tests/test_torch/: conftest.py
refs/: nblist.bib
